# camp2ascii

./: pyproject.toml  setup.py
camp2ascii/: converter.py
